--- a/index.html
+++ b/index.html
@@ -5,69 +5,88 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Beni Affet</title>
   <style>
-    :root{ --bg:#0f1724; --card:#0b1320; --accent:#ff6b81; --text:#f8fafc }
-    *{box-sizing:border-box}
-    html,body{height:100%;margin:0;font-family:Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;color:var(--text);background:linear-gradient(180deg,#08101a 0%, #091827 100%)}
-    .wrap{min-height:100%;display:flex;align-items:center;justify-content:center;padding:24px}
-    .card{background:rgba(255,255,255,0.03);padding:36px;border-radius:16px;box-shadow:0 10px 30px rgba(2,6,23,0.6);text-align:center;max-width:520px;width:100%}
-    h1{margin:0 0 18px;font-size:40px;letter-spacing:1px}
-    p.lead{margin:0 0 24px;opacity:0.9}
-    .controls{display:flex;gap:16px;justify-content:center;align-items:center}
-    button{padding:12px 22px;border-radius:12px;border:0;font-weight:700;font-size:18px;cursor:pointer;transition:transform 220ms ease, box-shadow 220ms ease;outline:none}
-    button:active{transform:translateY(2px)}
-    #evet{background:linear-gradient(90deg,#48bb78,#34d399);color:#022;transform-origin:center;box-shadow:0 8px 20px rgba(16,185,129,0.14)}
-    #hayir{background:transparent;border:2px solid rgba(255,255,255,0.08);color:var(--text);padding:12px 20px}
-    /* small helper text */
-    .hint{margin-top:16px;font-size:13px;opacity:0.75}
+    body {
+      margin: 0;
+      height: 100vh;
+      background: linear-gradient(160deg, #0f172a, #1e293b);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #f1f5f9;
+      font-family: "Poppins", sans-serif;
+    }
 
-    /* animation classes */
-    .pop{animation:popAnim 300ms ease forwards}
-    @keyframes popAnim{0%{transform:scale(1)}50%{transform:scale(1.15)}100%{transform:scale(1.08)}}
+    .container {
+      text-align: center;
+    }
 
-    .shake{animation:shakeAnim 350ms ease}
-    @keyframes shakeAnim{0%{transform:translateX(0)}20%{transform:translateX(-6px)}40%{transform:translateX(6px)}60%{transform:translateX(-4px)}80%{transform:translateX(4px)}100%{transform:translateX(0)}}
+    h1 {
+      font-size: 40px;
+      margin-bottom: 40px;
+    }
 
-    /* responsive */
-    @media (max-width:420px){h1{font-size:30px}button{font-size:16px;padding:10px 16px}}
+    .buttons {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      transition: all 0.3s ease;
+    }
+
+    button {
+      padding: 12px 25px;
+      font-size: 20px;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      font-weight: 600;
+      transition: all 0.3s ease;
+    }
+
+    #evet {
+      background-color: #22c55e;
+      color: #fff;
+      transform-origin: center;
+    }
+
+    #hayir {
+      background-color: #f43f5e;
+      color: #fff;
+    }
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <div class="card" role="main" aria-labelledby="title">
-      <h1 id="title">Beni affet?</h1>
-      <div class="controls">
-        <button id="evet" aria-pressed="false" aria-label="Evet">Evet</button>
-        <button id="hayir" aria-label="Hayır">Hayır</button>
-      </div>
+  <div class="container">
+    <h1>Beni affet?</h1>
+    <div class="buttons">
+      <button id="evet">Evet</button>
+      <button id="hayir">Hayır</button>
     </div>
   </div>
 
   <script>
-  const evetBtn = document.getElementById('evet');
-  const hayirBtn = document.getElementById('hayir');
+    const evetBtn = document.getElementById("evet");
+    const hayirBtn = document.getElementById("hayir");
+    const buttons = document.querySelector(".buttons");
 
-  // Başlangıçta ölçek 1
-  let scale = 1;
-  const INCREMENT = 0.2; // her 'hayır'da yüzde 20 büyü
-  const MAX_SCALE = 5;   // aşırı büyümeyi engelle
+    let scale = 1; // evet butonunun büyüklüğü
+    const INCREMENT = 0.2; // her tıklamada ne kadar büyüsün
+    const MAX_SCALE = 5; // en fazla ne kadar büyüsün
 
-  hayirBtn.addEventListener('click', () => {
-    // Hayıra her basıldığında evet butonunun boyutunu artır
-    if (scale < MAX_SCALE) {
-      scale += INCREMENT;
-      evetBtn.style.transform = `scale(${scale})`;
-    }
+    hayirBtn.addEventListener("click", () => {
+      if (scale < MAX_SCALE) {
+        scale += INCREMENT;
+        evetBtn.style.transform = `scale(${scale})`;
 
-    // Görsel olarak küçük bir titreme efekti ekleyelim
-    hayirBtn.classList.remove('shake');
-    void hayirBtn.offsetWidth; // animasyonu sıfırlar
-    hayirBtn.classList.add('shake');
-  });
+        // Evet büyüdükçe hayır butonunu sağa kaydır
+        const moveDistance = (scale - 1) * 40; // büyüklüğe göre uzaklık
+        buttons.style.gap = `${20 + moveDistance}px`;
+      }
+    });
 
-  evetBtn.addEventListener('click', () => {
-    alert('Seni seviyorum 💚');
-  });
-</script>
-
+    evetBtn.addEventListener("click", () => {
+      alert("Seni seviyorum 💚");
+    });
+  </script>
 </body>
 </html>
