--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <body>
   <canvas id="fireworks"></canvas>
   <div class="container">
-    <h1>Beni affet?</h1>
+    <h1>ASYA BENİ AFFFETTTTTTTT</h1>
     <div class="buttons">
       <button id="evet">Evet</button>
       <button id="hayir">Hayır</button>
