--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 <body>
   <canvas id="fireworks"></canvas>
   <div class="container">
-    <h1>Beni affet?</h1>
+    <h1>ASYA BENİ AFFFETTTTTT</h1>
     <div class="buttons">
-      <button id="evet">Evet</button>
-      <button id="hayir">Hayır</button>
+      <button id="evet">EVET</button>
+      <button id="hayir">hayır</button>
     </div>
   </div>
 
