--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ hayirBtn.addEventListener("click", () => {
 evetBtn.addEventListener("click", () => {
   startFireworks();
   music.play();
-  setTimeout(() => alert("Seni çok seviyorum 💚"), 2000);
+  setTimeout(() => alert("💛💙Seni çok seviyorum 💛💙"), 2000);
 });
 
   </script>
