--- a/index.html
+++ b/index.html
@@ -215,8 +215,12 @@
       addHearts();
 
       hayirCount++;
-      if (hayirCount === 20) {
+      if (hayirCount === 10) {
         alert("evete bas artık amk");
+      }
+
+        if (hayirCount === 20) {
+        alert("lan evete bas");
         hayirCount = 0;
       }
     });
